{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 14,
  "lineage": "67f2cdf2-6bdc-42e6-573d-c31ee8c73bd9",
  "resources": [
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-0b54318913c8316f5",
            "arn": "arn:aws:ec2:us-east-1:615687076434:instance/i-0550dee2e6eded39d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "filter": [
              {
                "name": "tag:eks:nodegroup-name",
                "values": [
                  "NG-goodburguer"
                ]
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "iam_instance_profile": "eks-e8c7b4f8-20f3-9849-7a7e-0e5adc4cc3b9",
            "id": "i-0550dee2e6eded39d",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0b5f435d0714bfb6a",
            "placement_partition_number": 0,
            "private_dns": "ip-172-31-37-203.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.37.203",
            "public_dns": "ec2-54-198-231-176.compute-1.amazonaws.com",
            "public_ip": "54.198.231.176",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-05ef46443d221d39c",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "secondary_private_ips": [
              "172.31.33.95",
              "172.31.34.164",
              "172.31.36.245",
              "172.31.40.212",
              "172.31.47.239"
            ],
            "security_groups": [
              "eks-cluster-sg-goodburguer-1078043203"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0183c3c66a25b44ed",
            "tags": {
              "eks:cluster-name": "goodburguer",
              "eks:nodegroup-name": "NG-goodburguer",
              "k8s.io/cluster-autoscaler/enabled": "true",
              "k8s.io/cluster-autoscaler/goodburguer": "owned",
              "kubernetes.io/cluster/goodburguer": "owned"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07ba25c9901997056"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:615687076434:loadbalancer/app/ALB-goodburguer/1dec9570cd1d8a9d",
            "arn_suffix": "app/ALB-goodburguer/1dec9570cd1d8a9d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ALB-goodburguer-53961004.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:615687076434:loadbalancer/app/ALB-goodburguer/1dec9570cd1d8a9d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB-goodburguer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b14ed9d2a472baaf"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00b9d57e8a157ac97"
              },
              {
                "subnet_id": "subnet-0183c3c66a25b44ed"
              },
              {
                "subnet_id": "subnet-0c1d5d6102025a707"
              }
            ],
            "subnets": [
              "subnet-00b9d57e8a157ac97",
              "subnet-0183c3c66a25b44ed",
              "subnet-0c1d5d6102025a707"
            ],
            "vpc_id": "vpc-07f6a22b67492e4c2",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:615687076434:listener/app/ALB-goodburguer/1dec9570cd1d8a9d/7ba6272f308e8fe2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:615687076434:targetgroup/TG-goodburguer/d72ed60bd4e3be88",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:615687076434:listener/app/ALB-goodburguer/1dec9570cd1d8a9d/7ba6272f308e8fe2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:615687076434:loadbalancer/app/ALB-goodburguer/1dec9570cd1d8a9d",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb",
            "aws_lb_target_group.tg",
            "aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:615687076434:targetgroup/TG-goodburguer/d72ed60bd4e3be88",
            "arn_suffix": "targetgroup/TG-goodburguer/d72ed60bd4e3be88",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:615687076434:targetgroup/TG-goodburguer/d72ed60bd4e3be88",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:615687076434:loadbalancer/app/ALB-goodburguer/1dec9570cd1d8a9d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "TG-goodburguer",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07f6a22b67492e4c2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:615687076434:targetgroup/TG-goodburguer/d72ed60bd4e3be88-20240511234238100700000001",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:615687076434:targetgroup/TG-goodburguer/d72ed60bd4e3be88",
            "target_id": "i-0550dee2e6eded39d"
          },
          "dependencies": [
            "aws_lb_target_group.tg",
            "data.aws_instance.ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:615687076434:security-group/sg-0b14ed9d2a472baaf",
            "description": "Grupo de seguranca do Cluster EKS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b14ed9d2a472baaf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "SG-goodburguer",
            "name_prefix": "",
            "owner_id": "615687076434",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07f6a22b67492e4c2"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}